{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 137,
  "lineage": "da3652ce-a403-d283-9b2b-43f723dc7101",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "bastion_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c0ec0223-4ac9-408f-9d77-82fecee441c1/resourceGroups/vhcm-train-rg/providers/Microsoft.Network/networkInterfaces/vhcm-train-bstn-nic",
            "internal_domain_name_suffix": "wyr3fx1ftlrudeffptdebhs1rf.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "vhcm-train-bstn-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c0ec0223-4ac9-408f-9d77-82fecee441c1/resourceGroups/vhcm-train-rg/providers/Microsoft.Network/publicIPAddresses/vhcm-train-ip",
                "subnet_id": "/subscriptions/c0ec0223-4ac9-408f-9d77-82fecee441c1/resourceGroups/vhcm-train-rg/providers/Microsoft.Network/virtualNetworks/vhcm-train-vnet/subnets/vhcm-train-pblc-sn001"
              }
            ],
            "location": "northeurope",
            "name": "vhcm-train-bstn-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "vhcm-train-rg",
            "tags": {
              "application": "HighCharity",
              "applicationversion": "1.0.0",
              "compliance": "HIPAA",
              "confidentiality": "PII/PHI",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "HighCharity Infra",
              "operatingcostcenter": "0570025003",
              "owner": "nguyenmanhcuong382@outlook.com",
              "projectcostcenter": "0570025003",
              "securitycontact": "nguyenmanhcuong382@outlook.com",
              "tier": "Infrastructure"
            }
          },
          "dependencies": [
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.public_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "private_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c0ec0223-4ac9-408f-9d77-82fecee441c1/resourceGroups/vhcm-train-rg/providers/Microsoft.Network/networkSecurityGroups/vhcm-train-prvt-nsg",
            "location": "northeurope",
            "name": "vhcm-train-prvt-nsg",
            "resource_group_name": "vhcm-train-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh-public-subnet",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "deny-internet-all",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "application": "HighCharity",
              "applicationversion": "1.0.0",
              "compliance": "HIPAA",
              "confidentiality": "PII/PHI",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "HighCharity Infra",
              "operatingcostcenter": "0570025003",
              "owner": "nguyenmanhcuong382@outlook.com",
              "projectcostcenter": "0570025003",
              "securitycontact": "nguyenmanhcuong382@outlook.com",
              "tier": "Infrastructure"
            },
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "public_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c0ec0223-4ac9-408f-9d77-82fecee441c1/resourceGroups/vhcm-train-rg/providers/Microsoft.Network/networkSecurityGroups/vhcm-train-pblc-nsg",
            "location": "northeurope",
            "name": "vhcm-train-pblc-nsg",
            "resource_group_name": "vhcm-train-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh-all",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-https-all",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-http-all",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "application": "HighCharity",
              "applicationversion": "1.0.0",
              "compliance": "HIPAA",
              "confidentiality": "PII/PHI",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "HighCharity Infra",
              "operatingcostcenter": "0570025003",
              "owner": "nguyenmanhcuong382@outlook.com",
              "projectcostcenter": "0570025003",
              "securitycontact": "nguyenmanhcuong382@outlook.com",
              "tier": "Infrastructure"
            },
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/c0ec0223-4ac9-408f-9d77-82fecee441c1/resourceGroups/vhcm-train-rg/providers/Microsoft.Network/publicIPAddresses/vhcm-train-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "vhcm-train-ip",
            "resource_group_name": "vhcm-train-rg",
            "sku": "Basic",
            "tags": {
              "application": "HighCharity",
              "applicationversion": "1.0.0",
              "compliance": "HIPAA",
              "confidentiality": "PII/PHI",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "HighCharity Infra",
              "operatingcostcenter": "0570025003",
              "owner": "nguyenmanhcuong382@outlook.com",
              "projectcostcenter": "0570025003",
              "securitycontact": "nguyenmanhcuong382@outlook.com",
              "tier": "Infrastructure"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c0ec0223-4ac9-408f-9d77-82fecee441c1/resourceGroups/vhcm-train-rg/providers/Microsoft.Network/virtualNetworks/vhcm-train-vnet/subnets/vhcm-train-prvt-sn001",
            "name": "vhcm-train-prvt-sn001",
            "resource_group_name": "vhcm-train-rg",
            "service_endpoints": [
              "Microsoft.Sql",
              "Microsoft.ServiceBus"
            ],
            "virtual_network_name": "vhcm-train-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c0ec0223-4ac9-408f-9d77-82fecee441c1/resourceGroups/vhcm-train-rg/providers/Microsoft.Network/virtualNetworks/vhcm-train-vnet/subnets/vhcm-train-pblc-sn001",
            "name": "vhcm-train-pblc-sn001",
            "resource_group_name": "vhcm-train-rg",
            "service_endpoints": [
              "Microsoft.ServiceBus",
              "Microsoft.ContainerRegistry"
            ],
            "virtual_network_name": "vhcm-train-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "private_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c0ec0223-4ac9-408f-9d77-82fecee441c1/resourceGroups/vhcm-train-rg/providers/Microsoft.Network/virtualNetworks/vhcm-train-vnet/subnets/vhcm-train-prvt-sn001",
            "network_security_group_id": "/subscriptions/c0ec0223-4ac9-408f-9d77-82fecee441c1/resourceGroups/vhcm-train-rg/providers/Microsoft.Network/networkSecurityGroups/vhcm-train-prvt-nsg",
            "subnet_id": "/subscriptions/c0ec0223-4ac9-408f-9d77-82fecee441c1/resourceGroups/vhcm-train-rg/providers/Microsoft.Network/virtualNetworks/vhcm-train-vnet/subnets/vhcm-train-prvt-sn001"
          },
          "dependencies": [
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "public_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c0ec0223-4ac9-408f-9d77-82fecee441c1/resourceGroups/vhcm-train-rg/providers/Microsoft.Network/virtualNetworks/vhcm-train-vnet/subnets/vhcm-train-pblc-sn001",
            "network_security_group_id": "/subscriptions/c0ec0223-4ac9-408f-9d77-82fecee441c1/resourceGroups/vhcm-train-rg/providers/Microsoft.Network/networkSecurityGroups/vhcm-train-pblc-nsg",
            "subnet_id": "/subscriptions/c0ec0223-4ac9-408f-9d77-82fecee441c1/resourceGroups/vhcm-train-rg/providers/Microsoft.Network/virtualNetworks/vhcm-train-vnet/subnets/vhcm-train-pblc-sn001"
          },
          "dependencies": [
            "azurerm_network_security_group.public_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.public_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "dfd223b6-9a65-41e3-90a5-7cc6409e5b8d",
            "id": "/subscriptions/c0ec0223-4ac9-408f-9d77-82fecee441c1/resourceGroups/vhcm-train-rg/providers/Microsoft.Network/virtualNetworks/vhcm-train-vnet",
            "location": "northeurope",
            "name": "vhcm-train-vnet",
            "resource_group_name": "vhcm-train-rg",
            "tags": {
              "application": "HighCharity",
              "applicationversion": "1.0.0",
              "compliance": "HIPAA",
              "confidentiality": "PII/PHI",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "HighCharity Infra",
              "operatingcostcenter": "0570025003",
              "owner": "nguyenmanhcuong382@outlook.com",
              "projectcostcenter": "0570025003",
              "securitycontact": "nguyenmanhcuong382@outlook.com",
              "tier": "Infrastructure"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    }
  ]
}